--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
@@ -54,6 +55,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.0.2",
@@ -65,6 +67,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^24.0.8",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
